# ggml-on-device

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  common.cpp
apps/gpt-2/: CMakeLists.txt
